# quickstart

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
notebooks/: playground.ipynb
quickstart/utils/: datetime.py
tests/: test_datetime.py
